cmake_minimum_required(VERSION 3.16)
project(Interview_Problems)

set(CMAKE_CXX_STANDARD 14)

add_executable(NPointsFindSquares NPointsFindSquares.cpp)
add_executable(NPointsFindRectangles NPointsFindRectangles.cpp)
add_executable(NisSumofSquares NisSumofSquares.cpp)
add_executable(NQueens NQueens.cpp)
add_executable(PermutationSequence PermutationSequence.cpp)
add_executable(ValidNumber ValidNumber.cpp)